--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,21 @@
 * {
-    list-style-type: none;
+    list-style-type: none;    
+}
+
+header {
+    width: 100vw;
+}
+nav {
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+    margin: 2rem;
+    font-size: 1rem;
     
+}
+.buttons button{
+    font-size: 1rem;
+    border: none;
+    background-color: white;
 }
 
